--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,3 +200,82 @@ input:checked+.slider:before {
 .dm-text {
   color: #334155;
 }
+
+
+/** Stat Section **/
+
+.stat-section,
+.chart-section,
+.history-section {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.chart-carousel {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.stats-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1.25rem 0 1.25rem;
+  gap: 0.8rem;
+  width: 100%;
+}
+
+.stat {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(236, 232, 232);
+  padding: 1rem;
+  gap: 0.3rem;
+}
+
+.stat-content {
+  display: flex;
+  width: 100%;
+  height: 1.5rem;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.stat-content h2 {
+  align-content: center;
+}
+
+.stat-content img {
+  width: 16px;
+  height: 16px;
+}
+
+.stat-value {
+  display: flex;
+  width: fit-content;
+  height: 100%;
+  gap: 0.2rem;
+}
+
+.stat-value p {
+  display: inherit;
+  width: inherit;
+  font-weight: 600;
+  size: 1.25rem;
+  align-content: center;
+  color: #334155;
+  align-items: center;
+}
+
+#total-event-change, #active-speaker-change, #registration-change, #percentage-change {
+  gap: 0.5rem;
+  font-size: 0.6rem;
+}
