--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,3 +279,157 @@ input:checked+.slider:before {
   gap: 0.5rem;
   font-size: 0.6rem;
 }
+
+/** Chart Section **/
+
+.chart-section {
+  padding: 0 1.25rem 0 1.25rem;
+}
+
+.chart-container {
+  display: flex;
+  flex-direction: column;
+  height: 17.75rem;
+}
+
+.chart {
+  width: 100%;
+}
+
+/** Carousel css **/
+.carousel {
+  padding: 0 1.25rem 0 1.25rem;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.carousel-container {
+  width: 100%;
+  height: 320px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 0.313rem;
+}
+
+.carousel-inner {
+  display: flex;
+  transition: transform 0.5s ease;
+  width: 100%;
+  flex-direction: row;
+}
+
+.carousel-item {
+  display: none;
+  width: 100%;
+  flex: 0 0 100%;
+}
+
+.carousel-item.active {
+  left: 0;
+  display: block;
+  transition: all 0.3s ease-out;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 320px;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  object-position: top;
+}
+
+img {
+  border-radius: 5px;
+}
+
+.text-container {
+  display: flex;
+  height: 131px;
+  width: 100%;
+  background-image: linear-gradient(#00000000 0%, #00000080 50%);
+  position: absolute;
+  padding: 0 16px;
+  bottom: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  gap: 0.5rem;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  bottom: 26px;
+  position: absolute;
+  padding: 0 0.5rem;
+}
+
+.text p {
+  margin-top: 0.5rem;
+}
+
+.carousel-prev,
+.carousel-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  font-size: 0.6rem;
+  font-weight: 800;
+  cursor: pointer;
+  width: 12px;
+  height: 12px;
+  color: black;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px;
+  border-radius: 100%;
+  width: 24px;
+  height: 24px;
+  background: white;
+  align-items: center;
+}
+
+.carousel-prev {
+  left: 0.5rem;
+}
+
+.carousel-next {
+  right: 0.5rem;
+}
+
+.dots-container {
+  display: flex;
+  text-align: center;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  bottom: 19px;
+  position: relative;
+}
+
+.dot {
+  height: 3px;
+  width: 12px;
+  background-color: #ffff;
+  opacity: 30%;
+  border-radius: 24%;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #ffff;
+  color: #ffff;
+  opacity: 100%;
+}
