--- a/styles/styles.css
+++ b/styles/styles.css
@@ -433,3 +433,434 @@ img {
   color: #ffff;
   opacity: 100%;
 }
+
+/** Search Section **/
+.history-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1.25rem 0 1.25rem;
+  gap: 0.8rem;
+}
+
+.events-history-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.9rem;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.search-bar,
+.date-input-container {
+  position: relative;
+  display: inline-block;
+}
+
+.search-bar input[type="search"]::placeholder {
+  font-size: 14px;
+  color: #cbd5e1;
+}
+
+.search-bar input[type="search"] {
+  width: 100%;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  padding-left: 30px;
+  font-size: 14px;
+  border: 1px solid #e2e8f0;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.search-icon {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 12px;
+  height: 12px;
+  pointer-events: none;
+}
+
+.date-input-container .date-input-wrapper .date-input {
+  width: 100%;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  font-size: 0.875rem;
+  border: 1px solid #e2e8f0;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-align: center;
+}
+
+.date-arrow {
+  position: absolute;
+  left: 14rem;
+  top: 52%;
+  transform: translateY(-50%);
+  font-size: 0.6rem;
+  pointer-events: none;
+  text-align: center;
+}
+
+.select-container, .name-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border: 1px solid #e2e8f0;
+  outline: none;
+  box-sizing: border-box;
+}
+
+/* Status  */
+.custom-select {
+  width: 40%;
+  padding: 0.5rem 0rem 0.5rem 0.5rem;
+  border-style: none;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  background-color: white;
+  text-align: center;
+  cursor: pointer;
+}
+
+.headlines {
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  height: 2.25rem;
+}
+
+#status {
+  content: none;
+  align-content: center;
+  justify-content: center;
+}
+
+.history-result {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1.25rem 0 1.25rem;
+  gap: 0.8rem;
+  margin-top: 1rem;
+}
+
+.sort-section {
+  display: contents;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.sort-container,
+.export-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 2.25rem;
+  font-size: 14px;
+}
+
+.three-dot-menu {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  border: 1px solid #e2e8f0;
+  padding: 0.5rem;
+  height: 36px;
+  width: 36px;
+  align-items: center;
+  justify-content: center;
+  gap: 0.1rem;
+}
+
+.dot-1, .dot-2, .dot-3 {
+  background-color: #000;
+  border-radius: 100%;
+  cursor: pointer;
+  display: inline-block;
+  width: 2.5px;
+  height: 2.5px;
+}
+
+.sort-container .sort-type {
+  height: 2.25rem;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.sort-type .most-recent {
+  width: 100%;
+  height: 2.25rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  font-size: 0.938rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+  border: 1px solid #e2e8f0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
+
+.export-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  font-size: 0.938rem;
+  border: 1px solid #e2e8f0;
+  border-radius: 2px;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  gap: 0.5rem;
+  height: 2.25rem;
+}
+
+.export-icon-container {
+  display: flex;
+  width: 1rem;
+  height: 1rem;
+  align-items: center;
+  justify-content: center;
+  top: 30%;
+}
+
+.export-icon {
+  width: 0.75rem;
+  height: 0.75rem;
+  pointer-events: none;
+}
+
+.result-search {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.result-headlines h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+  text-indent: inherit;
+}
+
+thead {
+  width: 100%;
+  gap: 1rem;
+}
+
+.status-type {
+  display: flex;
+  font-size: 12px;
+  border: none;
+  border-radius: 30px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+th {
+  text-align: left;
+}
+
+thead tr th {
+  font-size: 12px;
+  color: #64748B;
+  font-weight: 600;
+  line-height: 1rem;
+  padding: 0 1rem 0 1rem;
+  border: none;
+  background-color: #F1F5F9;
+  height: 48px;
+}
+
+td {
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+td p {
+  padding: 0;
+  display: flex;
+  width: 100%;
+  align-items: flex-start;
+  color: #334155;
+  width: 90px;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 2px 4px 2px 4px;
+}
+
+tr {
+  border-spacing: 1px;
+  padding: 1rem;
+}
+
+tbody td .event-name {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  font-size: 14px;
+  gap: 1rem;
+}
+
+.desktop-only {
+  display: none;
+}
+
+.mobile-only {
+  display: none;
+}
+
+.event-name {
+  display: flex;
+  font-size: 15px;
+  gap: 0.5rem;
+  color: #334155;
+}
+
+.event-row {
+  border-spacing: 1px;
+  outline: #F1F5F9;
+}
+
+.event-row:hover {
+  background-color: #F1F5F9;
+  border-spacing: 1px;
+}
+
+.event-details {
+  display: none;
+  background-color: #f9f9f9;
+  border-top: none;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+.event-row.active .dropdown-icon {
+  transform: rotate(90deg);
+}
+
+.dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+}
+
+.event-name i {
+  display: flex;
+  font-size: small;
+  height: 6.5px;
+  width: 3.5px;
+  align-items: center;
+  font-weight: 700;
+  justify-content: center;
+}
+
+.dropdown-content {
+  display: flex;
+  height: 36px;
+}
+
+.count-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
+  height: 36px;
+  width: 100%;
+}
+
+.page-count {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  justify-items: center;
+  gap: 1rem;
+  height: inherit;
+}
+
+.count-number {
+  display: flex;
+  flex-direction: row;
+}
+
+#current-page {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.count {
+  display: flex;
+  height: 24px;
+  width: 24px;
+  flex-direction: column;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  color: #ffff;
+  border: none;
+  outline: none;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.count-section .count.active {
+  background-color: #007BFF;
+  color: white;
+}
+
+.count-section .count {
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.row-count {
+  display: flex;
+  flex-direction: column;
+  height: 36px;
+  width: 36px;
+  align-items: center;
+  justify-content: center;
+  background: #e2e8f0;
+}
+
+.ri-ang,
+.lt-ang {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.fa-angle-left,
+.fa-angle-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.92px;
+  height: 5.42px;
+  font-size: small;
+  color: #334155;
+}
