--- a/styles/styles.css
+++ b/styles/styles.css
@@ -864,3 +864,101 @@ tbody td .event-name {
   font-size: small;
   color: #334155;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 20% auto;
+  border: 1px solid none;
+  border-radius: 2px;
+  width: 335px;
+  height: 470px;
+}
+
+.modal-name {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  height: 72px;
+  padding: 24px 24px 0 24px;
+  gap: 16px;
+}
+
+.discription {
+  width: 100%;
+  align-items: center;
+  height: 68px;
+  padding: 24px;
+  gap: 16px;
+}
+
+.modal-speaker {
+  width: 100%;
+  align-items: center;
+  height: 13.5rem;
+  padding: 24px;
+  gap: 16px;
+}
+
+.modal-buttons {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  gap: 0.5rem;
+  background-color: #F8FAFC;
+}
+
+#edit-button,
+#delete-button,
+#complete-button {
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  border: 1px #E2E8F0;
+  border-radius: 2px;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+#edit-button {
+  background-color: #ffff;
+  color: #334155;
+}
+
+#delete-button {
+  background-color: #F43F5E;
+  color: #ffff;
+}
+
+#complete-button {
+  background-color: #8576FF;
+  color: #ffff;
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
