--- a/styles/styles.css
+++ b/styles/styles.css
@@ -962,3 +962,62 @@ tbody td .event-name {
   text-decoration: none;
   cursor: pointer;
 }
+
+/* Bottom Navigation Bar */
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  background-color: #F3F4F6;
+  justify-content: space-around;
+  padding: 0 16px;
+  z-index: 1000;
+}
+
+.bottom-nav .nav-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 10px;
+  flex-grow: 1;
+  text-decoration: none;
+  height: 64px;
+  gap: 8px;
+  background-color: transparent;
+
+}
+
+.bottom-nav a img {
+  width: 14.5px;
+  height: 14.5px;
+  margin-bottom: 5px;
+}
+
+.bottom-nav.hidden {
+  transform: translateY(100%); /* Hide navigation by pushing it down */
+}
+
+.indicator {
+  width: 36px;
+  height: 27px;
+  border-radius: 2px;
+  background-color: green;
+}
+
+a .indicator.active {
+  background-color: red; /* Red indicator for active item */
+  outline: none;
+}
+
+
+.nav-item span {
+  font-size: 14px;
+  line-height: 20px;
+  color: #8576FF;
+
+}
+
