Update modal script

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1237,3 +1237,13 @@ a .indicator.active {
     table-layout: fixed;
   }
 }
+
+/* Initially hidden */
+#modal {
+  display: none;
+}
+
+/* Show modal when active */
+#modal.active {
+  display: flex;
+}
